--- a/public/en/index.html
+++ b/public/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://1wa.co</title><link rel="canonical" href="https://1wa.co"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://1wa.co" /></head></html>
+<!DOCTYPE html><html><head><title>https://truewebartisans.com</title><link rel="canonical" href="https://truewebartisans.com"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://truewebartisans.com" /></head></html>
