--- a/public/about/index.html
+++ b/public/about/index.html
@@ -38,8 +38,7 @@ We provide our experience for complex service and business communication solutio
 <link rel="manifest" href="https://truewebartisans.com/site.webmanifest">
 <link rel="mask-icon" href="https://truewebartisans.com/safari-pinned-tab.svg" color="#252627">
 <link rel="shortcut icon" href="https://truewebartisans.com/favicon.ico">
-<meta name="theme-color" content="#252627">
-<meta itemprop="name" content="About">
+<meta name="theme-color" content="#252627"><meta itemprop="name" content="About">
 <meta itemprop="description" content="The web development team with extensive experience in UX, design, programming, copywriting and business intelligence fields.
 We provide our experience for complex service and business communication solutions:
  Progressive web applications (PWA) Modern websites (API-based SPA) Chatbots (Facebook Messenger, Telegram, Viber, VK)  Technology &amp; Philosophy First of all, we are developers who know a lot about DX and support large projects in the long run. Therefore, all of our projects have excellent documentation and clear code.">
@@ -211,7 +210,7 @@ We provide our experience for complex service and business communication solutio
 
 
 
-<script type="text/javascript" src="https://truewebartisans.com/bundle.min.9e52e68b082cf2a30a7fead88260edb8818fbd7f7831e39674917d4539ec75df41ba88eaddfbd916594ab4fb2a31913b46cf2d6094cf80381edb8c632512a8ca.js" integrity="sha512-nlLmiwgs8qMKf&#43;rYgmDtuIGPvX94MeOWdJF9RTnsdd9Buojq3fvZFllKtPsqMZE7Rs8tYJTPgDge24xjJRKoyg=="></script>
+<script type="text/javascript" src="https://truewebartisans.com/bundle.min.4c3fb12a087ceed4a52cb5d57068a9795c7069617a01ca70f788052ad66e1791779e6c72686e1dc0ca13dc03b0203204b6566bb0dd1ee80de2b7ff4d8fe53db2.js" integrity="sha512-TD&#43;xKgh87tSlLLXVcGipeVxwaWF6Acpw94gFKtZuF5F3nmxyaG4dwMoT3AOwIDIEtlZrsN0e6A3it/9Nj&#43;U9sg=="></script>
 
 
 
