--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
 <meta name="description"
     content="The web development team with extensive experience in UX, design, programming, copywriting and business intelligence fields.
 We provide our experience for complex service and business communication solutions:
- Progressive web applications (PWA) Modern websites (API-based SPA) Chatbots (Facebook Messenger, Telegram, Viber, VK)  Technology &amp;amp; Philosophy First of all, we are developers who know a lot about DX and support large projects in the long run. Therefore, all of our projects have excellent documentation and clear code." />
+ Progressive web applications (PWA) UX and Customer Journey Maps Modern websites (API-based SPA) Chatbots (Facebook Messenger, Telegram, Viber, VK)  Technology &amp;amp; Philosophy First of all, we are developers who know a lot about DX and support large projects in the long run." />
 <meta name="keywords" content="web development team, web dev team, online business improve, web development, development team, online business" />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="https://truewebartisans.com/about/" />
@@ -41,11 +41,11 @@ We provide our experience for complex service and business communication solutio
 <meta name="theme-color" content="#252627"><meta itemprop="name" content="About">
 <meta itemprop="description" content="The web development team with extensive experience in UX, design, programming, copywriting and business intelligence fields.
 We provide our experience for complex service and business communication solutions:
- Progressive web applications (PWA) Modern websites (API-based SPA) Chatbots (Facebook Messenger, Telegram, Viber, VK)  Technology &amp; Philosophy First of all, we are developers who know a lot about DX and support large projects in the long run. Therefore, all of our projects have excellent documentation and clear code.">
+ Progressive web applications (PWA) UX and Customer Journey Maps Modern websites (API-based SPA) Chatbots (Facebook Messenger, Telegram, Viber, VK)  Technology &amp; Philosophy First of all, we are developers who know a lot about DX and support large projects in the long run.">
 
 
 
-<meta itemprop="wordCount" content="140">
+<meta itemprop="wordCount" content="145">
 
 
 
@@ -56,7 +56,7 @@ We provide our experience for complex service and business communication solutio
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="The web development team with extensive experience in UX, design, programming, copywriting and business intelligence fields.
 We provide our experience for complex service and business communication solutions:
- Progressive web applications (PWA) Modern websites (API-based SPA) Chatbots (Facebook Messenger, Telegram, Viber, VK)  Technology &amp; Philosophy First of all, we are developers who know a lot about DX and support large projects in the long run. Therefore, all of our projects have excellent documentation and clear code."/>
+ Progressive web applications (PWA) UX and Customer Journey Maps Modern websites (API-based SPA) Chatbots (Facebook Messenger, Telegram, Viber, VK)  Technology &amp; Philosophy First of all, we are developers who know a lot about DX and support large projects in the long run."/>
 
 
 
@@ -132,6 +132,7 @@ We provide our experience for complex service and business communication solutio
 
 <ul>
 <li>Progressive web applications (PWA)</li>
+<li>UX and Customer Journey Maps</li>
 <li>Modern websites (API-based SPA)</li>
 <li>Chatbots (Facebook Messenger, Telegram, Viber, VK)</li>
 </ul>
