Add animate.css, reduce npm dependencies

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      True web artisans → A team of professional product managers, UX
+      specialists, talented developers and designers, who are ready to share
+      their experience to solve your service and business tasks
+    </title>
+    <meta name="theme-color" content="#fee04a" />
+    <meta property="og:title" content="True web artisans" />
+    <meta
+      property="og:description"
+      content="Team who making: smart backend microservices, progressive web applications, effective business websites, chat bots for instant messengers and many more."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://1wa.co/" />
+    <meta property="og:image" content="https://1wa.co/apple-touch-icon.png" />
+    <meta
+      name="keywords"
+      content="web development team, web dev team, online business improve"
+    />
+    <meta
+      name="description"
+      content="True web artisans. Team who making: smart backend microservices, progressive web applications, effective business websites, chat bots for instant messengers and many more."
+    />
+    <link rel="icon" href="favicon.svg" />
+    <link rel="mask-icon" href="favicon.svg" color="#fee04a" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -11,20 +36,45 @@
       <main>
         <h1 class="title">True web artisans</h1>
         <p class="lead">
-          Hello and welcome! I'm Vic Shóstak, fullstack web developer, UX
-          evangelist, DX philosopher, product manager and founder of this
-          friendly company.
+          Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web
+          developer, UX evangelist, DX philosopher, product manager and founder
+          of this friendly company.
         </p>
-        <h2 class="subtitle">What are we doing?</h2>
-        <p>
-          I personally and my team of IT specialists around the
-          world&nbsp;&mdash; are ready to share our experience to solve your
-          business objectives by:
-        </p>
+        <div class="block">
+          <h2>What are we doing?</h2>
+          <p>
+            I personally and my team of IT specialists around the
+            world&nbsp;&mdash; are ready to share
+            <strong>our experience</strong>
+            to solve your business objectives by:
+          </p>
+          <ul>
+            <li>Effective business websites</li>
+            <li>Progressive web applications</li>
+            <li>Smart backend microservices</li>
+            <li>Chat bots for instant messengers</li>
+          </ul>
+        </div>
+        <div class="block">
+          <h2>How do we do this?</h2>
+          <p>
+            First of all, we are developers who know a lot about DX and support
+            large projects in the long run. Therefore, all of our projects have
+            excellent documentation and clear code. It's important!
+          </p>
+          <p>
+            The simple magic is based on <strong>Go</strong> (Golang),
+            <strong>Python</strong>, modern <strong>JavaScript</strong> and
+            <strong>CSS</strong>. Fast and secure delivery of developed web apps
+            and microservices to any servers by
+            <strong>Docker</strong> containers.
+          </p>
+        </div>
       </main>
       <aside>
         <img
           src="images/webartisans-bw-blank_optimized.svg"
+          class="animated slideInUp"
           alt="true web artisans logo"
         />
       </aside>
