--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,18 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       True web artisans → A team of professional product managers, UX
-      specialists, talented developers and designers, who are ready to share
-      their experience to solve your service and business tasks
+      specialists, talented developers and UI designers, who are ready to share
+      their experience to solve your business objectives
     </title>
-    <meta name="theme-color" content="#fee04a" />
-    <meta property="og:title" content="True web artisans" />
-    <meta
-      property="og:description"
-      content="Team who making: smart backend microservices, progressive web applications, effective business websites, chat bots for instant messengers and many more."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://1wa.co/" />
-    <meta property="og:image" content="https://1wa.co/apple-touch-icon.png" />
     <meta
       name="keywords"
       content="web development team, web dev team, online business improve"
@@ -25,6 +16,18 @@
       name="description"
       content="True web artisans. Team who making: smart backend microservices, progressive web applications, effective business websites, chat bots for instant messengers and many more."
     />
+    <meta name="theme-color" content="#fee04a" />
+    <meta property="og:title" content="True web artisans" />
+    <meta property="og:site_name" content="1wa.co" />
+    <meta
+      property="og:description"
+      content="Team who making: smart backend microservices, progressive web applications, effective business websites, chat bots for instant messengers and many more."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://1wa.co/" />
+    <meta property="og:image" content="https://1wa.co/apple-touch-icon.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
     <link rel="icon" href="favicon.svg" />
     <link rel="mask-icon" href="favicon.svg" color="#fee04a" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -34,7 +37,9 @@
   <body>
     <div class="wrapper">
       <main>
-        <h1 class="title">True web artisans</h1>
+        <header>
+          <h1>True web artisans</h1>
+        </header>
         <p class="lead">
           Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web
           developer, UX evangelist, DX philosopher, product manager and founder
@@ -48,12 +53,22 @@
             <strong>our experience</strong>
             to solve your business objectives by:
           </p>
-          <ul>
-            <li>Effective business websites</li>
-            <li>Progressive web applications</li>
-            <li>Smart backend microservices</li>
-            <li>Chat bots for instant messengers</li>
-          </ul>
+          <nav>
+            <ul>
+              <li>
+                <a href="#business-websites">Effective business websites</a>
+              </li>
+              <li>
+                <a href="#pwa">Progressive web applications</a>
+              </li>
+              <li>
+                <a href="#microservices">Smart backend microservices</a>
+              </li>
+              <li>
+                <a href="#chat-bots">Chat bots for instant messengers</a>
+              </li>
+            </ul>
+          </nav>
         </div>
         <div class="block">
           <h2>How do we do this?</h2>
@@ -72,11 +87,23 @@
         </div>
       </main>
       <aside>
-        <img
-          src="images/webartisans-bw-blank_optimized.svg"
-          class="animated slideInUp"
-          alt="true web artisans logo"
-        />
+        <figure>
+          <img
+            src="images/true_web_artisans-bird.svg"
+            class="bird animated slideInDown"
+            alt="true web artisans bird"
+          />
+          <img
+            src="images/true_web_artisans-boy.svg"
+            class="boy"
+            alt="true web artisans boy"
+          />
+          <img
+            src="images/true_web_artisans-swoosh.svg"
+            class="swoosh animated slideInUp"
+            alt="true web artisans swoosh"
+          />
+        </figure>
       </aside>
     </div>
   </body>
