--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -39,12 +39,12 @@
       <main>
         <header>
           <h1>True web artisans</h1>
+          <p class="lead">
+            Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web
+            developer, UX evangelist, DX philosopher, product manager and
+            founder of this friendly company.
+          </p>
         </header>
-        <p class="lead">
-          Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web
-          developer, UX evangelist, DX philosopher, product manager and founder
-          of this friendly company.
-        </p>
         <div class="block">
           <h2>What are we doing?</h2>
           <p>
