New color schema

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -56,10 +56,10 @@
           <nav>
             <ul>
               <li>
-                <a href="#business-websites">Effective business websites</a>
+                <a href="#ux-review">UX efficiency review</a>
               </li>
               <li>
-                <a href="#pwa">Progressive web applications</a>
+                <a href="#ui-design">User-friendly design for web apps</a>
               </li>
               <li>
                 <a href="#microservices">Smart backend microservices</a>
@@ -75,7 +75,8 @@
           <p>
             First of all, we are developers who know a lot about DX and support
             large projects in the long run. Therefore, all of our projects have
-            excellent documentation and clear code. It's important!
+            <strong>excellent</strong> documentation and
+            <strong>clear</strong> code. It's important!
           </p>
           <p>
             The simple magic is based on <strong>Go</strong> (Golang),
